--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 </head>
 <body>
 <header>
+<image src="logo.png"></image>
+<ul>
+<li>Home</li>
+<li>Produtos</li>
+<li>Contatos</li>
+</ul>
 </header>
 </body>
 </html> 
