--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <header>
+<div class="caixa">
 <image src="logo.png"></image>
 <nav>
 <ul>
@@ -15,6 +16,7 @@
 <li><a href = "contato.html">Contato</a></li>
 </ul>
 </nav>
+</div>
 </header>
 </body>
 </html> 
