--- a/index.html
+++ b/index.html
@@ -18,5 +18,12 @@
 </nav>
 </div>
 </header>
+<main>
+<ul>
+<li>Cabelo</li>
+<li>Barba</li>
+<li>Cabelo + Barba</li>
+</ul>
+</main>
 </body>
 </html> 
